# postgres-talk

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs  utils.rs
src/json_ops/: README.md  main.rs
src/json_ops/sql/: query.sql  query_search.sql  structure.sql
src/lateral_join/: main.rs
src/lateral_join/sql/: 00_query_visits.sql  01_query_conversions.sql  02_query_conversions_agg.sql  structure.sql
src/pivot_table/: main.rs
src/pivot_table/sql/: 01_query_crosstab.sql  query_simple.sql  structure.sql
src/rls/: main.rs  routes.rs
src/rls/sql/: auth-system.sql  structure.sql
src/window_functions/: main.rs
src/window_functions/sql/: query.sql  structure.sql
