[package]
name = "postgres-talk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "pivot_table"
path = "src/pivot_table/main.rs"

[[bin]]
name = "lateral_join"
path = "src/lateral_join/main.rs"

[[bin]]
name = "json_ops"
path = "src/json_ops/main.rs"

[[bin]]
name = "window_functions"
path = "src/window_functions/main.rs"

[[bin]]
name = "rls"
path = "src/rls/main.rs"

[[bin]]
name = "postgres-talk"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.69"
async-trait = "0.1.64"
axum = {version="0.6.7", features=["json"]}
axum-macros = "0.3.4"
chrono = {version="0.4.23", features=["clock", "serde"]}
clap = "4.1.4"
fake = {version="2.5.0", features=["derive", "chrono"]}
lazy_static = "1.4.0"
rand = "0.8.5"
rand_distr = "0.4.3"
serde = {version="1.0.152", features=["derive"]}
serde_json = {version="1.0.93", features=["raw_value"]}
sqlx = {version="0.6.2", features=["postgres", "runtime-tokio-rustls", "uuid", "chrono", "json"]}
tokio = {version="1.25.0", features=["full"]}
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
uuid = {version="1.3.0", features=["v4", "serde"]}
